# p2_detection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  main.py  output.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: backend.yaml  codeql.yml  web.yaml
docs/: api_docs.md  docs.md  entities_config.json  hooks.md  output.json
src/: instances.py  main.py
src/cloud/: aws.py
src/config/: config.py  index.py
src/constants/: prompt.py
src/database/: mongo_db.py  ps_db.py
src/doc/: doc_process.py
src/helper/: __init__.py  callback_func.py  conn_manager.py  cpu_helper.py  images.py  json_utuils.py  time.py
src/instances/: index.py  instances.py
src/llm/: llm.py
src/logs/: logger.py
src/models/: __init__.py  cloud.py  db.py  doc_config.py  docs.py
src/routers/: __init__.py  callback_func.py  docs.py  docs_websocket.py
tests/: test_db.py  test_docs.py  test_llm.py
web/: .env  .env.example  bun.lockb  package.json  tailwind.config.ts  tsconfig.json
web/src/app/: StoreProvider.tsx  layout.tsx  not-found.tsx  page.tsx
web/src/app/components/: NotSelected.tsx
web/src/app/components/Tasks/: Group.tsx  Overview.tsx
web/src/app/components/cases/: Grouping.tsx  Keywords.tsx
web/src/app/components/ui/: ActionableButtons.tsx  PrimaryButton.tsx
web/src/app/dashboard/: layout.tsx
web/src/app/dashboard/cases/: page.tsx
web/src/app/dashboard/cases/[case_name]/: layout.tsx  page.tsx
web/src/app/dashboard/help-and-feedback/: page.tsx
web/src/components/: DescriptionEditor.tsx  Result.tsx  ToggleTabs.tsx  UploadedPdf.tsx
web/src/components/Tasks/: Group.tsx  Overview.tsx
web/src/components/toasts/: Toast.tsx
web/src/components/ui/: PDFButtons.tsx  ProgressUpdates.tsx
web/src/config/: config.ts
web/src/constants/: dashboard.ts  state.ts
web/src/hooks/: useDocumentData.ts  usePresignedUrl.ts  useToast.ts
web/src/lib/: store.tsx
web/src/lib/features/: docSlice.ts  documentSelectionSlice.ts  logSlice.ts  pdfSelectionSlice.ts
web/src/types/dashboard/: dashboard.ts
web/src/utils/: pareseDate.ts  parseInputKey.ts
(+10 files in other folders)
